--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-redux": "^7.1.34",
     "@types/redux-persist": "^4.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.8",
     "autoprefixer": "^10.4.20",
     "cors": "^2.8.5",
     "eslint": "^9.21.0",
@@ -43,13 +44,15 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "express": "^4.21.2",
     "globals": "^15.15.0",
+    "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.0.9",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.8"
   },
   "packageManager": "yarn@4.7.0"
 }
