--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint ",
     "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
-    "framer-motion": "^12.4.9",
+    "framer-motion": "^12.4.10",
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.477.0",
@@ -20,17 +20,17 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^7.3.0",
     "redux-persist": "^6.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@reduxjs/toolkit": "^2.5.1",
-    "@tailwindcss/postcss": "^4.0.9",
-    "@tailwindcss/vite": "^4.0.6",
-    "@types/cors": "^2",
-    "@types/express": "^4",
+    "@reduxjs/toolkit": "^2.6.0",
+    "@tailwindcss/postcss": "^4.0.11",
+    "@tailwindcss/vite": "^4.0.11",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-redux": "^7.1.34",
@@ -40,16 +40,16 @@
     "autoprefixer": "^10.4.20",
     "cors": "^2.8.5",
     "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "express": "^4.21.2",
-    "globals": "^15.15.0",
+    "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
     "tailwind-variants": "^0.3.1",
-    "tailwindcss": "^4.0.9",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
+    "tailwindcss": "^4.0.11",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.26.0",
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.8"
