--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
+    "rollup-plugin-copy": "^3.5.0",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.0.11",
     "typescript": "~5.8.2",
